--- a/AISimulation/AISimulation.vcxproj.filters
+++ b/AISimulation/AISimulation.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="Source Files\TestEnvironment\BehaviourTree\Nodes\Actions">
       <UniqueIdentifier>{a55a8527-065a-4064-9b9c-bfa8fd897e17}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Utils">
+      <UniqueIdentifier>{f8cd64dc-e790-4161-8b1f-c1dbf8ba3689}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\Shaders\basic.frag">
@@ -139,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="src\TestEnvironment\BehaviourTree\Nodes\Actions\BTNodeActionSleep.h">
       <Filter>Source Files\TestEnvironment\BehaviourTree\Nodes\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\Timer.h">
+      <Filter>Source Files\Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
