Skeleton for latent execution pathfinding added

--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -134,6 +134,10 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\Shaders\Shader.h" />
     <ClInclude Include="src\TestEnvironment\Camera\Camera.h" />
     <ClInclude Include="src\TestEnvironment\Camera\FreeCamera.h" />
+    <ClInclude Include="src\TestEnvironment\MathGeom.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequest.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequestQueue.h" />
     <ClInclude Include="src\TestEnvironment\TestEnvironment.h" />
   </ItemGroup>
   <ItemGroup>
