--- a/AISimulation/AISimulation.vcxproj.filters
+++ b/AISimulation/AISimulation.vcxproj.filters
@@ -30,7 +30,7 @@
     </Filter>
     <Filter Include="Source Files\TestEnvironment\Pathfinding">
       <UniqueIdentifier>{bea8065e-9af5-476a-b1ec-fff071bd0d8f}</UniqueIdentifier>
-	</Filter>
+    </Filter>
     <Filter Include="Source Files\TestEnvironment\BehaviourTree">
       <UniqueIdentifier>{68d0e8c0-99c3-4282-9f51-93c804d9f2eb}</UniqueIdentifier>
     </Filter>
@@ -127,7 +127,7 @@
     </ClInclude>
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathfindingSystem.h">
       <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="src\TestEnvironment\BehaviourTree\BehaviourTree.h">
       <Filter>Source Files\TestEnvironment\BehaviourTree</Filter>
     </ClInclude>
@@ -256,6 +256,24 @@
     </ClInclude>
     <ClInclude Include="src\TestEnvironment\Transform.h">
       <Filter>Source Files\TestEnvironment</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\Meshes\CubeMesh.h">
+      <Filter>Source Files\TestEnvironment\Render\Meshes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\Meshes\Mesh.h">
+      <Filter>Source Files\TestEnvironment\Render\Meshes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\Meshes\SphereMesh.h">
+      <Filter>Source Files\TestEnvironment\Render\Meshes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\Renderable.h">
+      <Filter>Source Files\TestEnvironment\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\SphereRenderable.h">
+      <Filter>Source Files\TestEnvironment\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Render\RenderUtils.h">
+      <Filter>Source Files\TestEnvironment\Render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
