--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -162,13 +162,13 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\TestEnvironment\Camera\FreeCamera.h" />
     <ClInclude Include="src\TestEnvironment\GameObject.h" />
     <ClInclude Include="src\TestEnvironment\MathGeom.h" />
-    <ClInclude Include="src\TestEnvironment\Pathfinding\NavGrid.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h" />
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathfindingSystem.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathNode.h" />
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequest.h" />
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequestQueue.h" />
-    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathScheduler.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequest.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequestQueue.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\NavGrid.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpace.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\Collider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\ColliderDesc.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\SphereCollider.h" />
