--- a/AISimulation/AISimulation.vcxproj.filters
+++ b/AISimulation/AISimulation.vcxproj.filters
@@ -79,6 +79,12 @@
     <Filter Include="Source Files\Utils">
       <UniqueIdentifier>{f8cd64dc-e790-4161-8b1f-c1dbf8ba3689}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\TestEnvironment\Pathfinding\SearchSpace">
+      <UniqueIdentifier>{146237f8-3faf-4a91-9bae-679bd51fa863}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\TestEnvironment\Pathfinding\PathScheduler">
+      <UniqueIdentifier>{5cf15919-82aa-4e54-9029-786b9aa4cc60}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\Shaders\basic.frag">
@@ -107,25 +113,7 @@
     <ClInclude Include="src\TestEnvironment\MathGeom.h">
       <Filter>Source Files\TestEnvironment</Filter>
     </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequest.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathRequestQueue.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\NavGrid.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathNode.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace.h">
-      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TestEnvironment\Pathfinding\PathfindingSystem.h">
       <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
     </ClInclude>
     <ClInclude Include="src\TestEnvironment\BehaviourTree\BehaviourTree.h">
@@ -274,6 +262,24 @@
     </ClInclude>
     <ClInclude Include="src\TestEnvironment\Render\RenderUtils.h">
       <Filter>Source Files\TestEnvironment\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequest.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\PathScheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequestQueue.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\PathScheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\NavGrid.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\SearchSpace</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpace.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\SearchSpace</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathScheduler.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding\PathScheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h">
+      <Filter>Source Files\TestEnvironment\Pathfinding</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
