--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -164,11 +164,15 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\TestEnvironment\MathGeom.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\Pathfinder.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathNode.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\AStar.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\PathPlanner.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\PathPlanner\PathPlannerTypes.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathScheduler.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequest.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\PathScheduler\PathRequestQueue.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\NavGrid.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpace.h" />
+    <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpaceTypes.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\Collider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\ColliderDesc.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\SphereCollider.h" />
