--- a/AISimulation/AISimulation.vcxproj
+++ b/AISimulation/AISimulation.vcxproj
@@ -173,11 +173,15 @@ xcopy /Y /E "$(SolutionDir)common\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\NavGrid.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpace.h" />
     <ClInclude Include="src\TestEnvironment\Pathfinding\SearchSpace\SearchSpaceTypes.h" />
+    <ClInclude Include="src\TestEnvironment\Physics\Collision\ClosestPointOn.h" />
+    <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\AABBCollider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\Collider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\ColliderDesc.h" />
+    <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\PlaneCollider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\Colliders\SphereCollider.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\CollisionDetector.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Collision\CollisionTest.h" />
+    <ClInclude Include="src\TestEnvironment\Physics\Collision\DistanceTo.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Forces\Forces.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Forces\GravityForce.h" />
     <ClInclude Include="src\TestEnvironment\Physics\Forces\IForce.h" />
